--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,8 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/processing-core"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/processing-java"/>
 	<classpathentry kind="lib" path="/processing-java/mode/antlr.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Andrew/AppData/Local/Android/sdk/platforms/android-19/android.jar"/>
+	<classpathentry kind="lib" path="lib/cardboard.jar"/>
+	<classpathentry kind="lib" path="lib/libprotobuf-java-2.6-nano.jar"/>
 	<classpathentry kind="output" path="core/bin"/>
 </classpath>
