--- a/mode.properties
+++ b/mode.properties
@@ -1,10 +1,10 @@
-name = Android Mode
+name = Android Cardboard Mode
 authorList = [The Processing Foundation](http://android.processing.org/)
 url = https://github.com/processing/processing-android
-sentence = Create projects with Processing for Android devices
+sentence = Create Android Cardboard projects with Processing
 paragraph = This version of the Android Mode is for Processing 3.0a11+
 imports=processing.mode.java.JavaMode
-version = 240
-prettyVersion = 3.0-alpha2
+version = 239
+prettyVersion = 3alpha
 minRevision = 237
 maxRevision = 0
